--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ h1 {
     display: inline;
     flex: 1 1 auto;
     flex-basis: auto;
+    transition: background-color 1s;
     border:1px solid rgb(0, 0, 0);
     
 }
